[project]
name = "snow"
version = "0.2.0"
description = "Client library for the Odense ServiceNow instance, built for RPA developers"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.2",
]

[project.urls]
Repository = "https://github.com/odense-rpa/service-now-rpa"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/snow"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: read-only tests against the live ServiceNow instance (skip when no credentials; deselect with -m 'not live')",
]
